# dipolqqRadcor

./: CMakeLists.txt  README.md  decay.config  main.cxx
dizet/: DIZET-table1  table.down  table.mu  table.up
include/: AnomWt.h  BornV.h  DipoleEERij.h  DipoleQQRijRadCor.h  EventInitilizers.h  HepMCReader.h  HistManager.h  KKdizet.h  KinLib.h  Observables.h  PhysicsConstants.h
src/: AnomWt.cxx  Born.cxx  DipoleEERij.cxx  DipoleQQRijRadCor.cxx  HepMCReader.cxx  HistManager.cxx  KKdizet.cxx  Observables.cxx
